--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,40 @@
 {
 	"compilerOptions": {
-		"strict": true,
-		"module": "commonjs",
-		"moduleResolution": "node",
 		"target": "es2019",
-		"lib": ["es2019", "es2020", "es2022.error"],
-		"removeComments": true,
-		"useUnknownInCatchVariables": false,
-		"forceConsistentCasingInFileNames": true,
-		"noImplicitAny": true,
-		"noImplicitReturns": true,
-		"noUnusedLocals": true,
-		"strictNullChecks": true,
-		"preserveConstEnums": true,
-		"esModuleInterop": true,
-		"resolveJsonModule": true,
-		"incremental": true,
+		"module": "commonjs",
+		"lib": ["es2019"],
 		"declaration": true,
-		"sourceMap": true,
+		"outDir": "./dist",
+		"rootDir": "./",
+		"removeComments": true,
+		"strict": true,
+		"noImplicitAny": true,
+		"strictNullChecks": true,
+		"strictFunctionTypes": true,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": true,
+		"noUncheckedIndexedAccess": false,
+		"moduleResolution": "node",
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
 		"skipLibCheck": true,
-		"outDir": "./dist/",
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
+		"baseUrl": ".",
+		"paths": {
+		"@/*": ["./*"]
+	}
 	},
 	"include": [
-		"credentials/**/*",
-		"nodes/**/*",
-		"nodes/**/*.json",
-		"package.json",
-	],
+    "index.ts",
+    "nodes/**/*",
+    "credentials/**/*",
+    "package.json"
+  ],
+	"exclude": [
+		"node_modules/**/*",
+		"dist/**/*",
+		"**/*.test.ts",
+		"**/*.spec.ts"
+	]
 }
